# ba_autocalib

./: .gitignore  package.xml  setup.cfg  setup.py
ba_autocalib/: autocalib_node.py  data_collector.py  marker_detector.py  persistence.py  sequence_runner.py  solvers.py
config/: calib_poses.yaml  marker_config.yaml
launch/: autocalib.launch.py
